[package]
name = "ittyr"
version = "0.1.1"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "A Linux client for reading news from the Internet Teletype sevrice"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
clap = "2.33.3"
url = "2.2.2"
colored = "2.0.0"
nix = "0.21.0"
rand = "0.8.3"